...
            type="irina.activityreminder.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        android:padding="16dp"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/last_remind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{vm.lastRemind}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/settings_button"
            app:layout_constraintEnd_toStartOf="@id/settings_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_button" />

        <ImageButton
            android:id="@+id/settings_button"
...
