<resources>
    <string name="app_name">Activity Reminder</string>
    <string name="title_activity_settings">Settings</string>
    <string name="shared_preferences_global_key">irina.activityreminder.qlobal.pref</string>

</resources>
